# story-factory-zero-cost

./: .gitignore  README.md  ZERO_COST_DEPLOYMENT.md  pyproject.toml
.github/workflows/: control.yml  notify-failure.yml  produce.yml
supabase/: schema.sql
tests/: test_cost_guard.py  test_puppet_renderer.py  test_screenplay.py  test_studio_router.py  test_supabase_control.py
zero_cost/: blender_renderer.py  blender_scene.py  cost_guard.py  fallback_provider.py  krea_provider.py  memory.py  puppet_renderer.py  requirements.txt  screenplay.py  studio_router.py  supabase_control.py  worker.py  youtube_auth.py
