[project]
name = "story-factory"
version = "0.1.0"
description = "Approval-gated AI story production and YouTube publishing automation"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10,<4",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "python-dotenv>=1,<2",
  "python-multipart>=0.0.9,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
youtube = [
  "google-api-python-client>=2.140,<3",
  "google-auth-oauthlib>=1.2,<2",
]
test = ["pytest>=8,<9"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
packages = ["story_factory"]
